--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,5 +3,11 @@
 <% students.forEach(function(student){%>
 <p>
 	<%=student.name%>
+
+
+<form action="/students/<%= student.id%>?_method=delete" method="POST">
+
+  <input type="submit" value="x">
+</form>
 </p>
 <% })%>
