--- a/views/partials/bodyEdit.ejs
+++ b/views/partials/bodyEdit.ejs
@@ -1,4 +1,4 @@
-<form action="/students" method= "POST">
+<form action="/students/<%=student.id%>?_method=PUT" method= "POST">
 	
 	<label>Name:</label>
   	<input id="POST-name" type="text" name="name" value="<%=student.name %>">
